--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.14",
     "cors": "^2.8.5",
     "expo": "^53.0.9",
+    "expo-audio": "~0.4.4",
     "expo-auth-session": "~6.1.5",
     "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
@@ -30,12 +31,14 @@
     "expo-linking": "~7.1.4",
     "expo-random": "^14.0.1",
     "expo-router": "~5.0.6",
+    "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "express": "^4.18.2",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.1",
