--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-random": "^14.0.1",
     "expo-router": "~5.0.6",
     "expo-sensors": "~14.1.4",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
