--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mastra/client-js": "^0.1.22",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "expo": "^53.0.9",
     "expo-audio": "~0.4.4",
@@ -27,6 +28,7 @@
     "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.4",
